care-australia-uat/force-app/main/default/objects/Disable_Validations__c/Disable_Validations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting can be used to disable validation rules.</description>
    <label>Disable Validations</label>
</CustomObject>