care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/Disable_For_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Disable_For_Affiliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For Affiliation</label>
    <type>Checkbox</type>
</CustomField>