care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForAccount__c.field-meta.xml
<CustomField>
    <fullName>DisableForAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For Account</label>
    <type>Checkbox</type>
</CustomField>