care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForAllObjects__c.field-meta.xml
<CustomField>
    <fullName>DisableForAllObjects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked then validation rules on all objects will be deactivated.</description>
    <inlineHelpText>This field is checked then validation rules on all objects will be deactivated.</inlineHelpText>
    <label>Disable for all objects</label>
    <type>Checkbox</type>
</CustomField>