care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForAllocation__c.field-meta.xml
<CustomField>
    <fullName>DisableForAllocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For Allocation</label>
    <type>Checkbox</type>
</CustomField>