care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForBankResponseCode__c.field-meta.xml
<CustomField>
    <fullName>DisableForBankResponseCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For Bank Response Code</label>
    <type>Checkbox</type>
</CustomField>