care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForCampaign__c.field-meta.xml
<CustomField>
    <fullName>DisableForCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked then validation rules for campaign object will not be fired.</description>
    <inlineHelpText>This field is checked then validation rules for campaign object will not be fired.</inlineHelpText>
    <label>Disable for Campaign</label>
    <type>Checkbox</type>
</CustomField>