care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForCase__c.field-meta.xml
<CustomField>
    <fullName>DisableForCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked then validation rules for case object will not be fired.</description>
    <inlineHelpText>Validation rules for contact object will not be fired.</inlineHelpText>
    <label>Disable for Case</label>
    <type>Checkbox</type>
</CustomField>