care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForContact__c.field-meta.xml
<CustomField>
    <fullName>DisableForContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked then validation rules for contact object will not be fired.</description>
    <inlineHelpText>This field is checked then validation rules for contact object will not be fired.</inlineHelpText>
    <label>Disable for Contact</label>
    <type>Checkbox</type>
</CustomField>