care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForGAU__c.field-meta.xml
<CustomField>
    <fullName>DisableForGAU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For GAU</label>
    <type>Checkbox</type>
</CustomField>