care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForOpportunity__c.field-meta.xml
<CustomField>
    <fullName>DisableForOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked then validation rules for Opportunity object will not be fired.</description>
    <inlineHelpText>Checked then validation rules for opportunity object will not be fired.</inlineHelpText>
    <label>Disable for Opportunity</label>
    <type>Checkbox</type>
</CustomField>