care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForPayment__c.field-meta.xml
<CustomField>
    <fullName>DisableForPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For Payment</label>
    <type>Checkbox</type>
</CustomField>