care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForProduct__c.field-meta.xml
<CustomField>
    <fullName>DisableForProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For Product</label>
    <type>Checkbox</type>
</CustomField>