care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForRD__c.field-meta.xml
<CustomField>
    <fullName>DisableForRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For RD</label>
    <type>Checkbox</type>
</CustomField>