care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForRDA__c.field-meta.xml
<CustomField>
    <fullName>DisableForRDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For RDA</label>
    <type>Checkbox</type>
</CustomField>