care-australia-uat/force-app/main/default/objects/Disable_Validations__c/fields/DisableForRelationship__c.field-meta.xml
<CustomField>
    <fullName>DisableForRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable For Relationship</label>
    <type>Checkbox</type>
</CustomField>